--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eCommerce Website</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
@@ -18,8 +19,38 @@
         </nav>
     </header>
     <main>
-        
+        <section class="home">
+            <img 
+            src="assets/UX-HTML-CSS/Vase_Dame_2048x2048.jpg" 
+            alt="flower in Pearl Vase"
+            />
+            <h1>Welcome to this eCommerce site!!</h1>
+            <p> 
+                You'll be blown away by everything you nuy from us. They are the best. 
+                This paragraph is some text that tells you why. Lorem ipsum dolor sit
+                amet, consectetur adipiscing elit. Ut vel dapibus quam, at hendrerit
+                enim. Nam convallis a justo eget dignissim. Morbi posuere ultrices
+                quam, in finibus libero portititor at erat. Vestibulum eget eros sem.
+                Pellentesque habitant morbi tristique senectus et netus et malesuada
+                fames ac turpis egestas. Lorem ipsum dolor sit amet, consectetur 
+                adipiscing elit. Ut vel dapibus quam, at hendrerit enim. Nam convallis 
+                a justo eget dignissim. Morbi posuere ultrices quam, in finibus libero
+                porttitor ac. Donec euismod neque quis mauris varius, at maximus nisl
+                pheretra. Vestibulum elit metus, volutpat ut sollicitudin eget,
+                Pellentesque at erat. Vestibulum eget eros sem. Pellentesque habitant
+                morbi tristique senectus et netus et malesuada fames ac turpis
+                egestas. 
+            </p>
+        </section>
+        </section class="=about">
+        <h2>Who are we?</h2>
+       <p>
+        This is some text about the company. It'll give youe all the 
+        information you need to know about who we are so you trust us when you 
+        buy from us.
+       </p>
     </main>
-    <footer></footer>
+    <footer>eCommerce Site copyright 2022
+    </footer>
 </body>
 </html>
