Updated Index.Html + Updated Styles.Css + Created Products Section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     src="assets/icons8-pottery-96.png"
     alt="small yellow pottery pot"
     />
-    <img 
+    <img
     src="assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg"
     alt="Clay on hands"
     />
@@ -45,7 +45,7 @@
             alt="Circle vase with single flower"
             />
             <h1>About US</h1>
-            <p> Element contains two background Images
+            <p> 
 
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                 ut labore et dolore magna aliqua. Neque laoreet suspendisse interdum consectetur libero id
@@ -80,7 +80,103 @@
        alt="Mundo Bowls"
        />
        <p>
-       Mundo Bowls $48.00
+       MUNDO BOWLS $48.00
+        Tincidunt praesent semper feugiat nibh
+        sed. Vulputate mi sit amet mauris
+        commodo quis imperdiet massa. Amet
+        tellus cras adipiscing enim eu turpis
+        egestas pretium aenean.
+       </p>
+       <img
+       src="assets/oriento-maVIpNNtmlQ-unsplash.jpg"
+       alt="Red vase"
+       />
+       <p>
+       NATUREZA VASE $37.00
+        Tincidunt praesent semper feugiat nibh
+        sed. Vulputate mi sit amet mauris
+        commodo quis imperdiet massa. Amet
+        tellus cras adipiscing enim eu turpis
+        egestas pretium aenean.
+       </p>
+       <img
+       src="assets/tom-crew-bgIO-u4GEfI-unsplash.jpg"
+       alt="Bowl craddled by bowl"
+       />
+       <p>
+       FERIA BOWLS $29.00
+        Tincidunt praesent semper feugiat nibh
+        sed. Vulputate mi sit amet mauris
+        commodo quis imperdiet massa. Amet
+        tellus cras adipiscing enim eu turpis
+        egestas pretium aenean.
+       </p>
+       <img
+       src="assets/tom-crew-3uwu5K0RtaE-unsplash.jpg"
+       alt="Two gray pots with lids"
+       />
+       <p>
+       NATUREZA POTS $59.00
+        Tincidunt praesent semper feugiat nibh
+        sed. Vulputate mi sit amet mauris
+        commodo quis imperdiet massa. Amet
+        tellus cras adipiscing enim eu turpis
+        egestas pretium aenean.
+       </p>
+       <img
+       src="assets/linh-le-a0rE64YJDA4-unsplash.jpg"
+       alt="Oval shaped vase containing a single eucalyptus branch"
+       />
+       <p>
+       PEDRA VASE $31.00
+        Tincidunt praesent semper feugiat nibh
+        sed. Vulputate mi sit amet mauris
+        commodo quis imperdiet massa. Amet
+        tellus cras adipiscing enim eu turpis
+        egestas pretium aenean.
+       </p>
+       <img
+       src="assets/tom-crew-oiZAQvxTcYQ-unsplash.jpg"
+       alt="Two white/gray pots with lids"
+       />
+       <p> 
+       VIAJA POTS $57.00
+        Tincidunt praesent semper feugiat nibh
+        sed. Vulputate mi sit amet mauris
+        commodo quis imperdiet massa. Amet
+        tellus cras adipiscing enim eu turpis
+        egestas pretium aenean.
+       </p>
+       <img
+       src="assets/tom-crew-YA2E3d7a9Wo-unsplash.jpg"
+       alt="One single bowl and three stacked bowls"
+       />
+       <p>
+       SERVICO PLATES $35.00
+        Tincidunt praesent semper feugiat nibh
+        sed. Vulputate mi sit amet mauris
+        commodo quis imperdiet massa. Amet
+        tellus cras adipiscing enim eu turpis
+        egestas pretium aenean.
+       </p>
+       <imag
+       src="assets/oriento-l0ah3UBLppo-unsplash.jpg"
+       alt="Blue vase"
+       />
+       <p>
+       CANPEAO VASE $37.00
+        Tincidunt praesent semper feugiat nibh
+        sed. Vulputate mi sit amet mauris
+        commodo quis imperdiet massa. Amet
+        tellus cras adipiscing enim eu turpis
+        egestas pretium aenean.
+       </p>
+       <img
+       src="assets/tom-crew-SITGdvztUdg-unsplash.jpg"
+       alt="Five stacked white bowls"
+       />
+       <p>
+       TROCA BOWLS $25.00
         Tincidunt praesent semper feugiat nibh
         sed. Vulputate mi sit amet mauris
         commodo quis imperdiet massa. Amet
@@ -88,6 +184,13 @@
         egestas pretium aenean.
        </p>
     </main>
+    <h3> CONTACT US</h3>
+    <p>
+        EMAIL
+    </p>
+    <p>
+        MESSAGE
+    </p>
     <footer>Pretium nibh ipsum consequat nisl vel pretium. Amet tellus cras adipiscing enim eu turpis. copyright 2015-2020
     </footer>
 </body>
